--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 async-trait = "0.1.83"
 axum = { version = "0.7.7", features = ["ws"] }
 axum-extra = { version = "0.9.4", features = ["typed-header"] }
+base64 = "0.22.1"
 chrono = { version = "0.4.38", default-features = false, features = [
   "clock",
   "serde",
@@ -18,8 +19,10 @@ hex = "0.4.3"
 hmac = "0.12.1"
 hyper = "1.4.1"
 jsonwebtoken = "9.3.0"
-once_cell = "1.20.1"
-redis = "0.27.2"
+lazy_static = "1.5.0"
+once_cell = "1.20.2"
+redis = "0.27.4"
+reqwest = { version = "0.12.8", features = ["json"] }
 rs_openai = "0.4.1"
 sea-orm = { version = "1.0.1", features = [
   "sqlx-postgres",
