--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 async-trait = "0.1.83"
-axum = { version = "0.7.7", features = ["ws"] }
+axum = { version = "0.7.7", features = ["ws", "multipart"] }
 axum-extra = { version = "0.9.4", features = ["typed-header"] }
 axum-streams = { version = "0.19.0", features = ["text"] }
 base64 = "0.22.1"
@@ -18,9 +18,12 @@ futures = "0.3.31"
 garde = { version = "0.20.0", features = ["full"] }
 hex = "0.4.3"
 hmac = "0.12.1"
+http-body-util = "0.1.2"
 hyper = "1.4.1"
+image = "0.25.4"
 jsonwebtoken = "9.3.0"
 lazy_static = "1.5.0"
+mime_guess = "2.0.5"
 once_cell = "1.20.2"
 redis = "0.27.4"
 reqwest = { version = "0.12.8", features = ["json"] }
