--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ chrono = { version = "0.4.38", default-features = false, features = [
   "clock",
   "serde",
 ] }
+deepgram = { version = "0.6.2", features = ["speak"] }
 dotenv = "0.15.0"
 futures = "0.3.31"
 garde = { version = "0.20.0", features = ["full"] }
@@ -24,9 +25,11 @@ image = "0.25.4"
 jsonwebtoken = "9.3.0"
 lazy_static = "1.5.0"
 mime_guess = "2.0.5"
+mp3lame-encoder = "0.2.0"
 once_cell = "1.20.2"
 redis = "0.27.4"
-reqwest = { version = "0.12.8", features = ["json"] }
+regex = "1.11.1"
+reqwest = { version = "0.12.8", features = ["json", "stream"] }
 rs_openai = "0.4.1"
 sea-orm = { version = "1.0.1", features = [
   "sqlx-postgres",
