--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ futures = "0.3.31"
 garde = { version = "0.20.0", features = ["full"] }
 hex = "0.4.3"
 hmac = "0.12.1"
+hound = "3.5.1"
 http-body-util = "0.1.2"
 hyper = "1.4.1"
 image = "0.25.4"
